[gd_scene load_steps=7 format=2]

[ext_resource path="res://motion_ai/common/tasking/actions/MoveToPosition.tscn" type="PackedScene" id=1]
[ext_resource path="res://motion_ai/common/tasking/core/TaskTemplate.tscn" type="PackedScene" id=2]
[ext_resource path="res://motion_ai/common/tasking/actions/DropAllItem.tscn" type="PackedScene" id=3]
[ext_resource path="res://motion_ai/common/tasking/actions/MoveToEntityPriorityArea.tscn" type="PackedScene" id=4]
[ext_resource path="res://motion_ai/common/tasking/MoveItemDropMulti.gd" type="Script" id=5]
[ext_resource path="res://motion_ai/common/tasking/actions/GrabItem.tscn" type="PackedScene" id=6]

[node name="MoveItemDropMulti" instance=ExtResource( 2 )]
script = ExtResource( 5 )

[node name="PreDropAllItem" parent="." index="0" instance=ExtResource( 3 )]

[node name="MoveToEntityPriorityArea" parent="." index="1" instance=ExtResource( 4 )]
target_area = 2

[node name="GrabItem" parent="." index="2" instance=ExtResource( 6 )]

[node name="MoveToPosition" parent="." index="3" instance=ExtResource( 1 )]

[node name="DropAllItem" parent="." index="4" instance=ExtResource( 3 )]
[connection signal="action_failure" from="PreDropAllItem" to="." method="_on_PreDropAllItem_action_failure"]
[connection signal="action_success" from="PreDropAllItem" to="." method="_on_PreDropAllItem_action_success"]
[connection signal="action_failure" from="MoveToEntityPriorityArea" to="." method="_on_MoveToEntityPriorityArea_action_failure"]
[connection signal="action_success" from="MoveToEntityPriorityArea" to="." method="_on_MoveToEntityPriorityArea_action_success"]
[connection signal="action_failure" from="GrabItem" to="." method="_on_GrabItem_action_failure"]
[connection signal="action_success" from="GrabItem" to="." method="_on_GrabItem_action_success"]
[connection signal="action_failure" from="MoveToPosition" to="." method="_on_MoveToPosition_action_failure"]
[connection signal="action_success" from="MoveToPosition" to="." method="_on_MoveToPosition_action_success"]
[connection signal="action_failure" from="DropAllItem" to="." method="_on_DropAllItem_action_failure"]
[connection signal="action_success" from="DropAllItem" to="." method="_on_DropAllItem_action_success"]
